# detect-game-mp

./: .gitignore  README.md  package-lock.json  package.json  pyproject.toml  tailwind.config.js
detect_game/: app.py
static/css/: styles.css  tailwind.css
static/js/: scripts.js
templates/: index.html
