[tool.poetry]
name = "detect-game"
version = "0.1.0"
description = ""
authors = ["RiwRiwara <awirut2629@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.114.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
